--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "vuetify": "^3.9.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@vitejs/plugin-vue": "^6.0.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-vue": "^10.5.1",
+    "globals": "^16.5.0",
     "vite": "^7.1.2"
   }
 }
